crates/hook-rs/src/utils/parsers/bash/snapshots/hook_rs__utils__parsers__bash__bash_parser__tests__substitution_embedded_in_word.snap
---
source: src/bash/bash_parser.rs
expression: context
---
raw: echo file-$(date).txt
children:
  - children:
      - name: echo
        args:
          - file-$(date).txt
        contains_substitution: true
      - name: date
        nesting:
          - Substitution
