crates/hook-rs/src/utils/parsers/bash/snapshots/hook_rs__utils__parsers__bash__bash_parser__tests__substitution_in_for_loop_body.snap
---
source: src/bash/bash_parser.rs
expression: context
---
raw: for f in a b; do echo $(whoami); done
children:
  - children:
      - name: echo
        args:
          - $(whoami)
        contains_substitution: true
        nesting:
          - For
      - name: whoami
        nesting:
          - For
          - Substitution
