crates/hook-rs/src/utils/parsers/bash/snapshots/hook_rs__utils__parsers__bash__bash_parser__tests__substitution_inner_for_loop.snap
---
source: src/utils/parsers/bash/bash_parser.rs
expression: context
---
raw: echo $(for x in a b; do echo $x; done)
children:
  - children:
      - name: echo
        args:
          - $(for x in a b; do echo $x; done)
        contains_substitution: true
      - name: echo
        args:
          - $x
        has_variable: true
        nesting:
          - Substitution
          - For
